<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/d_round_corner_white_bkg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/ic_exclamation_mark" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/location_heading_denied_sub"
            android:textColor="@color/black"
            android:textSize="12dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/location_heading_denied_step_1"
            android:textColor="@color/black"
            android:textSize="12dp" />


        <TextView
            android:id="@+id/tvTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/location_heading_denied_step_2"
            android:textColor="@color/black"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/location_heading_denied_step_3"
            android:textColor="@color/black"
            android:textSize="12dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:padding="2dp"
                android:textSize="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/follow_bg"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/allow"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_line_transparent"
                android:gravity="center"
                android:padding="2dp"
                android:textSize="10dp"
                android:includeFontPadding="false"
                android:text="Cancel"
                android:textColor="@color/black" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>